# storyflow

./: .gitignore
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/agents/: __init__.py  base.py  character_design.py  plot_deconstruct.py  qc_review.py  scene_planning.py  script_analysis.py  video_assembly.py  visual_gen.py
backend/app/api/: websocket.py
backend/app/core/: config.py  orchestrator.py  scheduler.py  session.py
backend/app/core/memory/: __init__.py
backend/app/core/tools/: __init__.py
backend/app/models/: __init__.py
backend/app/services/: llm.py  storage.py  video_generator.py
docs/task/: 00_任务索引.md  01_项目开发任务总览.md  02_前端开发任务.md  03_后端开发任务.md  04_AI视频生成流程规范.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: index.ts
frontend/src/components/: AgentFlow.tsx  InterventionDrawer.tsx  QueueStatusBar.tsx  SettingsModal.tsx  Skeletons.tsx  StatusBar.tsx  StoryInputCard.tsx  VideoPreview.tsx
frontend/src/components/StoryList/: StoryList.tsx  index.ts
frontend/src/hooks/: useWebSocket.ts
frontend/src/store/: useStore.ts
frontend/src/stores/: storyStore.ts
frontend/src/types/: index.ts
